--- a/SongBook/Podfile
+++ b/SongBook/Podfile
@@ -8,4 +8,6 @@ target 'SongBook' do
   # Pods for SongBook
     pod 'SnapKit'
     pod 'Firebase/Core'
+    pod 'Firebase/Database'
+    pod 'Firebase/Storage'
 end
