Add Crashlytics to the app

--- a/SongBook/Podfile
+++ b/SongBook/Podfile
@@ -10,4 +10,6 @@ target 'SongBook' do
     pod 'Firebase/Core'
     pod 'Firebase/Database'
     pod 'Firebase/Storage'
+    pod 'Fabric'
+    pod 'Crashlytics'
 end
