--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,4 @@ steps:
     configuration: 'Release'
     xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
     xcodeVersion: 'default' # Options: 8, 9, 10, default, specifyPath
+    useXcpretty: false # Makes it easier to diagnose build failures
