--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,12 +16,12 @@ steps:
     projectDirectory: '$(system.defaultWorkingDirectory)/SongBook'
   displayName: 'pod install using the CocoaPods task with a forced repo update and a custom project directory'
 
-- task: Xcode@5
-  inputs:
-    actions: 'build'
-    scheme: ''
-    sdk: 'iphoneos'
-    configuration: 'Release'
-    xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
-    xcodeVersion: 'default' # Options: 8, 9, 10, default, specifyPath
-    useXcpretty: false # Makes it easier to diagnose build failures
+#- task: Xcode@5
+#  inputs:
+#    actions: 'build'
+#    scheme: ''
+#    sdk: 'iphoneos'
+#    configuration: 'Release'
+#    xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
+#    xcodeVersion: 'default' # Options: 8, 9, 10, default, specifyPath
+#    useXcpretty: false # Makes it easier to diagnose build failures
