--- a/SongBook/Podfile
+++ b/SongBook/Podfile
@@ -7,18 +7,18 @@ target 'SongBook' do
 
   # Pods for SongBook
     pod 'SnapKit'
+    pod 'Firebase'
     pod 'Firebase/Core'
     pod 'Firebase/Database'
     pod 'Firebase/Storage'
+    pod 'Firebase/Auth'
     pod 'FirebaseUI'
-    pod 'Firebase'
+    pod 'FirebaseUI/Auth'
+    pod 'FirebaseUI/Phone'
 end
 target ‘SongBookUnitTests’ do
  inherit! :search_paths
  # Pods for testing
- pod 'Firebase/Core'
-    pod 'Firebase/Database'
-    pod 'Firebase/Storage'
  end
 target ‘SongBookUITests’ do
  inherit! :search_paths
