--- a/SongBook/SongBook/Supporting files/Info.plist
+++ b/SongBook/SongBook/Supporting files/Info.plist
@@ -39,5 +39,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF UI Text Regular.otf</string>
+		<string>SF UI Text Semibold.otf</string>
+		<string>SF UI Text Medium.otf</string>
+	</array>
 </dict>
 </plist>
